# Domain-Checker

./: .gitignore  CHANGELOG.md  CHANGES_SUMMARY.md  COMMAND_NAME_CHANGE.md  CONTACT_INFORMATION.md  Cargo.toml  DIG_ANY_UPDATE.md  DIG_DISPLAY_UPDATE.md  DIG_FEATURE_SUMMARY.md  DNS_PROPAGATION_FEATURE.md  FINAL_SUMMARY.md  GUI_FEATURES_SUMMARY.md  INSTALLATION.md  MCP_SERVER_UPDATE.md  PERFORMANCE_IMPROVEMENTS_SUMMARY.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PROJECT_SUMMARY.md  RDAP_FRAMEWORK.md  README.md  REGISTRATION_STATUS_UPDATE.md  RESOLVED_RECORDS_DISPLAY.md  SPEED_OPTIMIZATIONS_FINAL.md  STREAMLINED_UPDATE.md  UPDATER_DOCUMENTATION.md  UPDATER_SUMMARY.md  install.py  install.sh  pyproject.toml  quick_install.sh  requirements.txt  test_contact_display.py  test_gui.py  update.py
backup_1.0.8/: DOCUMENTATION.md  README.md  build.py  install.py  pyproject.toml  test_domain_checker.py  update.py  updater_config.json
backup_1.0.8/domain_checker/: cli.py  config.py  whois_client.py
backup_1.0.8/examples/: advanced_usage.py  dig_examples.py  domains.txt  mcp_client.py
backup_1.0.8/src/: lib.rs
backup_1.3.1/: CHANGELOG.md  LICENSE  OUTPUT_FORMATS_SUMMARY.md
backup_1.3.2/: CHANGELOG.md  EXAMPLES_OUTPUT_FORMATS.md  GUI_INSTALLATION_GUIDE.md  README.md  UPDATER_FIX_SUMMARY.md  requirements.txt  test_output_formats.py
domain_checker/: __init__.py  cli.py  core.py  dig_client.py  gui.py  mcp_server.py  models.py  propagation_checker.py  rdap_client.py  update_checker.py  updater.py  whois_client.py
domain_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: basic_usage.py
(+8 files in other folders)
