[package]
name = "domain-checker"
version = "1.0.0"
edition = "2021"
description = "High-performance domain checker with WHOIS and RDAP support"
license = "MIT"
repository = "https://github.com/domain-checker/domain-checker"

[lib]
name = "domain_checker_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
url = "2.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

[dependencies.pyo3]
version = "0.20"
features = ["extension-module"]

[build-dependencies]
pyo3-build-config = "0.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
