[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domain-checker"
version = "1.3.4"
description = "Asynchronous domain checker with WHOIS and RDAP support"
authors = [{name = "Domain Checker", email = "domain@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.0",
    "python-whois>=0.7.3",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "mcp>=1.0.0",
    "asyncio-throttle>=1.0.0",
]

[project.scripts]
domch = "domain_checker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["domain_checker*"]
